--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -1,4 +1,6 @@
 <ion-content>
+  <!-- Dots -->
+  <ion-progress-bar *ngIf="loading" type="indeterminate"></ion-progress-bar>
   <app-clipboard-item-component
     *ngFor="let clip of (clips$ | async); let i = index"
     (modifyClip)="modifyClip($event)"
