--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="container header">
     <div class="content">
-      <h2>the clipboard app designed for you</h2>
+      <h2>A seamless clipboard</h2>
       <h4>
         Infiniti Clips is a free, open source hybrid clipboard application
         available for Windows and macOS.
@@ -14,6 +14,15 @@
           <ion-icon name="logo-apple"></ion-icon>
         </ion-item>
       </div>
+
+      <div class="light-theme container btn">
+        <button mat-raised-button color="primary">
+          Dowload for Windows (64Bit)
+        </button>
+        <button mat-raised-button>Dowload for Mac</button>
+      </div>
+      <p>Version 0.0.1β</p>
+
       <h4>
         Powered by Ionic - Angular 7.
       </h4>
