--- a/src/global.scss
+++ b/src/global.scss
@@ -16,6 +16,12 @@ ion-item {
   --border-color: var(--line-rule-color);
 }
 
+ion-progress-bar {
+  --background: rgba(220, 220, 225, 1);
+  --buffer-background: rgba(248, 248, 248, 1);
+  --progress-background: rgba(220, 220, 225, 1);
+}
+
 /** Angular Material */
 @import '~@angular/material/theming';
 @include mat-core();
