--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -37,6 +37,17 @@
     </div>
   </div>
 
+  <div class="container content">
+    <div class="search">
+      <div class="img">
+        <img src="assets/images/app-search.png" />
+      </div>
+      <p>
+        Hello World
+      </p>
+    </div>
+  </div>
+
   <!-- Footer -->
   <div class="light-theme">
     <mat-toolbar class="nav-bar footer">
