--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -7,7 +7,7 @@
 }
 .container.header {
   background: rgba(248, 248, 252, 1);
-  padding: 4vw 6vw 0vw 6vw;
+  padding: 4vw 6vw 0 6vw;
   min-height: 560px;
 }
 
@@ -25,6 +25,21 @@
     width: 420px;
     height: auto;
     border-radius: 10px;
+  }
+}
+
+.container.content {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .search {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px;
+    img {
+      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.07);
+      border-radius: 10px;
+    }
   }
 }
 
