add google drive connection restriction

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,12 +1,13 @@
-<ion-content>
-  <div class="container header">
-    <div class="content">
+<ion-content class="light-theme">
+  <!-- Header -->
+  <div class="container flex-start space-evenly flex-wrap header">
+    <div class="container column justify-content align-items center">
       <h2>A seamless clipboard</h2>
       <h4>
         Infiniti Clips is a free, open source hybrid clipboard application
         available for Windows and macOS.
       </h4>
-      <div class="container logo">
+      <div class="container">
         <ion-item lines="none">
           <ion-icon name="logo-windows"></ion-icon>
         </ion-item>
@@ -15,7 +16,7 @@
         </ion-item>
       </div>
 
-      <div class="light-theme container btn">
+      <div class="container">
         <button mat-raised-button color="primary">
           Dowload for Windows (64Bit)
         </button>
@@ -26,34 +27,61 @@
       <h4>
         Powered by Ionic - Angular 7.
       </h4>
-      <div class="container logo">
+      <div class="container">
         <ion-item lines="none">
           <ion-icon name="logo-angular"></ion-icon>
         </ion-item>
       </div>
     </div>
-    <div class="img right">
+    <div>
       <img src="assets/images/app-main.png" />
     </div>
   </div>
 
-  <div class="container content">
+  <!-- Content -->
+  <div class="container content column justify-content align-items center">
+    <h3>for Teamwork</h3>
+    <p>
+      Lorem ipsum dolor sit amet, at omnis omnesque sit. Agam vulputate
+      philosophia mei et, dicant oblique copiosae sit no. Dicam vidisse vis eu,
+      nec ex esse imperdiet. Saperet gloriatur cu est, iuvaret feugiat salutatus
+      nam ea. Ut ridens putent vix, detracto euripidis nam eu. Feugiat inermis
+      prodesset eu nam, pri fabulas deseruisse dissentiet at. Eam te ullum
+      democritum sententiae, mei at ceteros accusam repudiare. Viderer denique
+      vim an, sale nemore cu sed. Ut vim vocent recusabo, alterum sapientem mea
+      ut. In sale corpora fastidii cum, ea nam euismod convenire. Sit ut alii
+      omnis debet, ea cum posse intellegebat. Ad vix apeirian patrioque, mazim
+      temporibus pri an. Ea erat invenire forensibus vis. Quo falli luptatum ut,
+      te sit noster comprehensam. Ceteros appetere eu pri, sed ea ipsum utinam
+      perfecto, ius causae perpetua quaerendum te. Lucilius prodesset definiebas
+      at quo, cu duo wisi expetenda referrentur. Nam populo definitiones ex, vel
+      ne partem aperiam diceret. Mea dico bonorum recusabo ut. Vel in dicunt
+      volumus minimum. Vidit illum omittam ne ius. Sea inani delectus euripidis
+      et. Mei paulo munere ponderum cu, stet senserit mel ea, has errem
+      explicari ne. No qui tibique erroribus repudiandae, insolens convenire
+      intellegam cum et. Essent salutatus te mei, pro debitis perpetua et. Ea
+      dicam comprehensam has. Alia liber contentiones per no. Est in magna
+      invenire, sit mutat augue omittam ei.
+    </p>
+  </div>
+
+  <!-- <div class="container content">
     <div class="search">
       <div class="img">
         <img src="assets/images/app-search.png" />
       </div>
       <p>
-        Hello World
+        Search
       </p>
     </div>
-  </div>
+  </div> -->
 
   <!-- Footer -->
-  <div class="light-theme">
-    <mat-toolbar class="nav-bar footer">
+  <div class="footer">
+    <mat-toolbar>
       <img src="assets/icon/infiniti-opensource.svg" />
     </mat-toolbar>
-    <mat-toolbar class="nav-bar footer">
+    <mat-toolbar>
       <p>Released under MIT License | Copyright @ 2019</p>
       <span class="spacer"></span>
       <p>About</p>
