--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -1,60 +1,78 @@
 .container {
-  align-items: flex-start;
-  justify-content: space-evenly;
   position: relative;
   display: flex;
+}
+.space-evenly {
+  justify-content: space-evenly;
+}
+.flex-start {
+  align-items: flex-start;
+}
+.flex-wrap {
   flex-wrap: wrap;
 }
-.container.header {
+.column {
+  flex-direction: column;
+}
+.justify-content.center {
+  justify-content: center;
+}
+.align-items.center {
+  align-items: center;
+}
+
+//  Header
+.header {
   background: rgba(248, 248, 252, 1);
   padding: 4vw 6vw 0 6vw;
   min-height: 560px;
-}
 
-.header .content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.header .img.right {
-  padding: 2vw;
-  img {
-    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.07);
-    width: 420px;
-    height: auto;
-    border-radius: 10px;
+  p {
+    font-size: 0.7rem;
   }
-}
 
-.container.content {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  .search {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
+  button {
+    margin: 50px 10px 15px 10px;
+    min-width: 240px;
+    min-height: 60px;
+  }
+
+  div:last-child {
+    padding: 2vw;
     img {
       box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.07);
+      width: 420px;
+      height: auto;
       border-radius: 10px;
     }
   }
 }
 
-.container.btn button {
-  margin: 50px 10px 15px 10px;
-  min-width: 240px;
-  min-height: 60px;
+// Content
+.content {
+  margin: 25px;
+  // .search {
+  //   display: flex;
+  //   justify-content: space-evenly;
+  //   padding: 20px;
+  //   img {
+  //     box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.07);
+  //     border-radius: 10px;
+  //   }
+  // }
 }
 
+// Footer
 .footer {
+  p {
+    font-size: 0.7rem;
+  }
   img {
     width: 160px;
   }
 }
 
+// General
 .spacer {
   flex: 1 1 auto;
 }
@@ -87,7 +105,6 @@ h4 {
 }
 
 p {
-  font-size: 0.7rem;
   font-weight: 300;
   color: var(--text-color--extra-light);
 }
