--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -16,7 +16,7 @@
         </ion-item>
       </div>
 
-      <div class="container">
+      <div class="container flex-wrap space-evenly">
         <button mat-raised-button color="primary">
           Dowload for Windows (64Bit)
         </button>
