--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -1,29 +1,51 @@
-.example-container {
+.container {
   position: absolute;
-  top: 60px;
-  bottom: 60px;
   left: 0;
   right: 0;
+  top: 60px;
+  bottom: 0px;
 }
 
-.example-sidenav {
+.sidenav {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 200px;
-  background: rgba(255, 0, 0, 0.5);
+  width: 240px;
+  // background: var(--ion-color-tertiary);
+
+  .mat-divider,
+  &.mat-drawer-side {
+    border-color: var(--line-rule-color);
+    border-right: solid 1px var(--line-rule-color);
+  }
+
+  h3 {
+    color: var(--ion-color-tertiary);
+    font-size: 0.9rem;
+    font-weight: 700;
+  }
+  a,
+  p {
+    font-size: 0.8rem;
+    color: var(--text-color--light);
+  }
+
+  .selected {
+    mat-icon,
+    a {
+      color: var(--ion-color-primary);
+    }
+    background-color: var(--ion-color-primary-contrast);
+  }
 }
 
-.example-header {
+.header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
 }
 
-.example-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.mat-list-icon {
+  color: var(--ion-color-tertiary);
 }
