--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -1,8 +1,14 @@
 <div class="light-theme">
-  <!-- Home IM SEARCH SYSTEM -->
-  <mat-toolbar class="header">Header</mat-toolbar>
+  <mat-toolbar class="header">
+    <mat-toolbar-row>
+      <img src="assets/icon/clip.svg" />
+      <h4>Infiniti CLIPS</h4>
+      <span class="spacer"></span>
+      <mat-icon class="icon">close</mat-icon>
+    </mat-toolbar-row>
+  </mat-toolbar>
   <ng-container>
-    <mat-sidenav-container class="container">
+    <mat-sidenav-container class="container content">
       <mat-sidenav
         #sidenav
         mode="side"
