--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -1,8 +1,57 @@
 .container {
+  position: relative;
+  display: flex;
+}
+.space-evenly {
+  justify-content: space-evenly;
+}
+.flex-start {
+  align-items: flex-start;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.column {
+  flex-direction: column;
+}
+.justify-content.center {
+  justify-content: center;
+}
+.align-items.center {
+  align-items: center;
+}
+
+.header {
+  background-color: white;
+  // box-shadow: 0px -1px 0px red inset;
+  border-bottom: 1px solid var(--line-rule-color);
+  h4 {
+    font-size: 0.9rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 2px 4px 2px 4px;
+    color: var(--ion-color-tertiary);
+  }
+  img {
+    width: 35px;
+    text-align: center;
+    vertical-align: middle;
+    margin-right: 5px;
+  }
+  // General
+  .spacer {
+    flex: 1 1 auto;
+  }
+  .icon {
+    margin: 0 8px;
+  }
+}
+
+.container.content {
   position: absolute;
   left: 0;
   right: 0;
-  top: 60px;
+  top: 65px;
   bottom: 0px;
 }
 
