--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -23,6 +23,10 @@
 
 .header {
   background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   // box-shadow: 0px -1px 0px red inset;
   border-bottom: 1px solid var(--line-rule-color);
   h4 {
@@ -51,7 +55,10 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 65px;
+  top: 57px;
+  @media (min-width: 600px) {
+    top: 65px;
+  }
   bottom: 0px;
 }
 
@@ -86,13 +93,6 @@
     }
     background-color: var(--ion-color-primary-contrast);
   }
-}
-
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
 }
 
 .mat-list-icon {
