add routing strategy

--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -74,7 +74,7 @@
         <ion-button
           fill="clear"
           [color]="router.url === '/preferences/iam' ? 'primary' : 'tertiary'"
-          (click)="navigate('/preferences/iam')"
+          (click)="navigateRoot('/preferences/iam')"
         >
           <ion-icon slot="icon-only" name="settings"></ion-icon>
         </ion-button>
