fix navifgation usse

--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -35,7 +35,7 @@
         </mat-nav-list>
       </mat-sidenav>
       <mat-sidenav-content [formGroup]="options">
-        <router-outlet></router-outlet>
+        <ion-router-outlet></ion-router-outlet>
       </mat-sidenav-content>
     </mat-sidenav-container>
   </ng-container>
