add settings menu

--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -35,6 +35,7 @@ ion-item:hover {
   }
   h3 {
     font-size: 0.76rem;
+    color: var(--text-color--light);
   }
   p {
     color: var(--text-color--extra-light);
