--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -82,9 +82,9 @@
     </div>
 
     <!-- Content -->
-    <div class="sidenav-content">
+    <div class="sidenav-content container">
       <!-- ion-router-outlet doesn't work correctly 2019-03-01 -->
-      <router-outlet> </router-outlet>
+      <ion-router-outlet> </ion-router-outlet>
     </div>
   </div>
 </ion-content>
