--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -5,9 +5,10 @@
   h2 {
     padding: 10px;
     font-weight: 900;
+    margin-right: 15px;
     font-size: 1.05rem;
     text-transform: uppercase;
-    margin-right: 15px;
+    color: var(--ion-color-tertiary);
   }
   img {
     width: 54px;
