--- a/src/app/pages/iam/iam.page.html
+++ b/src/app/pages/iam/iam.page.html
@@ -1,3 +1,37 @@
 <ion-content>
-  IAM
+  <ion-card>
+    <ion-card-content>
+      <ion-item lines="none">
+        <ion-avatar slot="start">
+          <img
+            src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+          />
+        </ion-avatar>
+        <ion-label>
+          <h4>Iam Google</h4>
+          <p>iam@outlook.com</p>
+        </ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Google Drive</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <!-- Toggles in a List -->
+      <ion-list>
+        <ion-item>
+          <ion-label
+            ><p>
+              Sync with Google Drive
+            </p>
+          </ion-label>
+          <ion-toggle></ion-toggle>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
