--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -20,11 +20,16 @@
   // box-shadow: 0px -1px 0px red inset;
   border-bottom: 1px solid var(--line-rule-color);
   h4 {
+    color: var(--ion-color-tertiary);
     font-size: 0.9rem;
     font-weight: 700;
     text-transform: uppercase;
     margin: 2px 4px 2px 4px;
-    color: var(--ion-color-tertiary);
+  }
+  a,
+  p {
+    font-size: 0.8rem;
+    color: var(--text-color--light);
   }
   img {
     width: 35px;
@@ -63,13 +68,7 @@
   width: 240px;
   // background: var(--ion-color-tertiary);
 
-  .mat-divider,
-  &.mat-drawer-side {
-    border-color: var(--line-rule-color);
-    border-right: solid 1px var(--line-rule-color);
-  }
-
-  h3 {
+  h4 {
     color: var(--ion-color-tertiary);
     font-size: 0.9rem;
     font-weight: 700;
@@ -80,12 +79,18 @@
     color: var(--text-color--light);
   }
 
+  .mat-divider,
+  &.mat-drawer-side {
+    border-color: var(--line-rule-color);
+    border-right: solid 1px var(--line-rule-color);
+  }
+
   .selected {
     mat-icon,
     a {
       color: var(--ion-color-primary);
     }
-    background-color: var(--ion-color-primary-contrast);
+    background-color: var(--ion-color-light-extra-blue);
   }
 }
 
