add google drive support

--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -5,10 +5,8 @@
       <span>Infiniti CLIPS</span>
     </ion-title>
     <ion-buttons slot="secondary">
-      <ion-button color="tertiary">
-        <ion-icon *ngIf="!(isLoading | async)" name="refresh"></ion-icon>
+      <ion-button *ngIf="(isLoading | async)" color="tertiary">
         <ion-spinner
-          *ngIf="(isLoading | async)"
           class="spinner"
           name="lines-small"
           color="tertiary"
