--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -31,7 +31,7 @@
             <a matLine>{{ section.name }}</a>
           </mat-list-item>
           <mat-divider></mat-divider>
-          <h4 mat-subheader>System</h4>
+          <h4 mat-subheader>SYSTEM</h4>
           <mat-list-item
             *ngFor="let section of system"
             [ngClass]="section.path === router.url ? 'selected' : ''"
