--- a/src/app/pages/iam/iam.page.html
+++ b/src/app/pages/iam/iam.page.html
@@ -3,13 +3,11 @@
     <ion-card-content>
       <ion-item lines="none">
         <ion-avatar slot="start">
-          <img
-            src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
-          />
+          <img src="assets/icon/clip.svg" />
         </ion-avatar>
         <ion-label>
           <h4>Iam Google</h4>
-          <p>iam@outlook.com</p>
+          <p>iam@google.com</p>
         </ion-label>
       </ion-item>
     </ion-card-content>
