--- a/src/app/pages/iam/iam.page.scss
+++ b/src/app/pages/iam/iam.page.scss
@@ -14,3 +14,8 @@ ion-card-subtitle {
   font-size: 0.9rem;
   text-transform: uppercase;
 }
+
+ion-button {
+  min-width: 70px;
+  min-height: 35px;
+}
